--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Add this at the end of your existing CSS file */
 
 /* Responsive styles for smaller screens */
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     h1 {
       font-size: 1.5em;
       padding: 15px;
@@ -24,8 +24,8 @@
     }
   
     .choices img {
-      width: 100px;
-      height: 100px;
+      width: 50px;
+      height: 500px;
     }
   
     button.rematch-button {
