--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,46 @@
-/* Add this at the end of your existing CSS file */
 
-/* Responsive styles for smaller screens */
 @media only screen and (max-width: 768px) {
-    h1 {
-      font-size: 1.5em;
-      padding: 15px;
+    body {
+        margin: 5px;
+      }
+    
+      h1 {
+        font-size: 1.5em;
+        padding: 5px;
+        margin-bottom: 10px;
+      }
+    
+      .scores {
+        font-size: 1em;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 10px;
+      }
+    
+      .choices {
+        flex-direction: column;
+        align-items: center;
+      }
+    
+      .choices div {
+        margin: 5px;
+      }
+    
+      .choices img {
+        width: 10px;
+        height: 10px;
+      }
+    
+      button.rematch-button {
+        font-size: 1em;
+        padding: 5px 10px;
+      }
+    
+      #result-text {
+        font-size: 1em;
+        margin: 10px 0;
+      }
     }
-  
-    .scores {
-      font-size: 1em;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 20px;
-    }
-  
-    .choices {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .choices div {
-      margin: 10px;
-    }
-  
-    .choices img {
-      width: 50px;
-      height: 500px;
-    }
-  
-    button.rematch-button {
-      font-size: 1em;
-    }
-  
-    #result-text {
-      font-size: 1em;
-      padding-bottom: 10px;
-    }
-  }
   
 
 
@@ -77,9 +81,28 @@ body {
     transition: all 0.3s;
   }
   
-  .choices div:hover img {
-    background-color: #4CAF50;
-  }
+ 
+.charmander:hover img,
+.charmander:hover p {
+  background-color: rgba(255, 140, 0, 0.3); 
+}
+
+.squirtle:hover img,
+.squirtle:hover p {
+  background-color: rgba(30, 144, 255, 0.3); 
+}
+
+.bulbasaur:hover img,
+.bulbasaur:hover p {
+  background-color: rgba(34, 139, 34, 0.3); 
+}
+
+
+.choices img,
+.choices p {
+  transition: background-color 0.3s ease;
+}
+
   
   .scores {
     display: flex;
