--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@
       margin-bottom: 5px;
     }
   
+    p {
+        margin: 1px;
+    }
+  
     .scores {
       font-size: 1em;
       flex-direction: column;
@@ -21,17 +25,18 @@
     .choices {
       flex-direction: column;
       align-items: center;
+      margin: 1px;
     }
   
     .choices div {
-      margin: 3px;
+      margin: 1px;
     }
   
     .choices img {
       width: 25vw;
       height: 25vw;
-      max-width: 100px;
-      max-height: 100px;
+      max-width: 75px;
+      max-height: 75px;
     }
   
     button.rematch-button {
